crates/oxidoc/tests/snapshots/golden_writer__native__common__blockquote.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ BlockQuote
    [ Para [ Str "quoted" ]
    , Para
        [ Str "more" , Space , Str "lines" , Space , Str "here" ]
    ]
]
