crates/oxidoc/tests/snapshots/golden_writer__native__common__bullet-list-loose.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ BulletList
    [ [ Para [ Str "a" ] ]
    , [ Para [ Str "b" ] ]
    , [ Para [ Str "c" ] ]
    ]
]
