crates/oxidoc/tests/snapshots/golden_writer__native__common__bullet-list-tight.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ BulletList
    [ [ Plain [ Str "a" ] ]
    , [ Plain [ Str "b" ] ]
    , [ Plain [ Str "c" ] ]
    ]
]
