crates/oxidoc/tests/snapshots/golden_writer__native__common__bullet-nested.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ BulletList
    [ [ Para [ Str "outer" ]
      , BulletList
          [ [ Plain [ Str "inner" , Space , Str "one" ] ]
          , [ Plain [ Str "inner" , Space , Str "two" ] ]
          ]
      ]
    ]
]
