crates/oxidoc/tests/snapshots/golden_writer__native__common__citation.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "see"
    , Space
    , Cite
        [ Citation
            { citationId = "knuth1984"
            , citationPrefix = []
            , citationSuffix = []
            , citationMode = NormalCitation
            , citationNoteNum = 1
            , citationHash = 0
            }
        ]
        [ Str "[@knuth1984]" ]
    , Space
    , Str "for"
    , Space
    , Str "details"
    ]
]
