crates/oxidoc/tests/snapshots/golden_writer__native__common__code-block-id.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ CodeBlock ( "snippet" , [] , [] ) "plain code" ]
