crates/oxidoc/tests/snapshots/golden_writer__native__common__code-block-indented.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ CodeBlock ( "" , [] , [] ) "indented code\nsecond line" ]
