crates/oxidoc/tests/snapshots/golden_writer__native__common__code-block-lang.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ CodeBlock
    ( "" , [ "rust" ] , [] ) "let s = \"hi\";\nx < y && y > z"
]
