crates/oxidoc/tests/snapshots/golden_writer__native__common__code-block-numbered.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ CodeBlock
    ( "" , [ "python" , "numberLines" ] , [] )
    "print(1)\nprint(2)"
]
