crates/oxidoc/tests/snapshots/golden_writer__native__common__definition-list-loose.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ DefinitionList
    [ ( [ Str "Term" ]
      , [ [ Para [ Str "Definition" , Space , Str "one" ] ]
        , [ Para [ Str "Definition" , Space , Str "two" ] ]
        ]
      )
    ]
]
