crates/oxidoc/tests/snapshots/golden_writer__native__common__definition-list-tight.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ DefinitionList
    [ ( [ Str "Term" ]
      , [ [ Plain [ Str "Definition" , Space , Str "one" ] ]
        , [ Plain [ Str "Definition" , Space , Str "two" ] ]
        ]
      )
    ]
]
