crates/oxidoc/tests/snapshots/golden_writer__native__common__definition-term-colon.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[ DefinitionList
    [ ( [ Str "term: with colon" ]
      , [ [ Plain [ Str "definition" ] ] ]
      )
    ]
]
